# multi-axis-persona-safety

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
configs/: attack_arm.yaml  baseline_extend.yaml  defence_arm.yaml  eval_sizes.yaml  experiment_template.yaml  ext_b_v_harm_causal_gemma_4_31b_thinking_off.yaml  ext_b_v_harm_causal_gemma_4_31b_thinking_on.yaml  inference_runtime.yaml  judge_prompt.yaml  model_hooks.yaml  paper_capping_ranges.yaml  phase_b_gemma_4_31b_thinking_off.yaml  phase_b_gemma_4_31b_thinking_on.yaml  phase_b_qwen_3_32b.yaml  phase_d_gemma_4_31b_thinking_off.yaml  phase_e.yaml  plan_b.yaml  plan_b_gemma_4_31b_thinking_off.yaml  plan_b_gemma_4_31b_thinking_on.yaml  plan_b_qwen_3_32b.yaml  role_expression_prompt.yaml  subjects.yaml
dashboard/: app.py  wireframe.md
dashboard/data/: schema.md
docs/: README.md  extension_writeup_draft.md  index.html
docs/figures/: blind_spot_summary.html  cross_model_attack_recovery.html  cross_model_auc_lift.html  cross_model_pipeline.html  lambda_pareto.html  (+8 more)
plans/: CONVENTIONS.md  decisions.md  extensions_post_plan_b.md  may_3_directive.md  plan.md  plan_b_directive.md  progress.md  runpod-migration.md  sglang_post_plan_b_spike.md  stage-0-environment.md  stage-1-architecture.md  stage-2-infrastructure.md  stage-3-foundation.md  stage-4-attack.md  stage-5-composition.md  stage-6-defense.md  stage-7-extensions.md  stage-8-presentation.md
report/: blog.md  figures.md  paper.md
scripts/: audit_truncation.py  bench_sglang_vs_hf.py  chain_phase_a_subjects.sh  chain_phase_b_subjects.sh  download_eval_datasets.py  generate_cross_model_figures.py  generate_post_phase_d_figures.py  inference_grid_search.py  launch_phase_a_subject.sh  launch_phase_b_subject.sh  phased_pipeline_smoke.py  run_sglang_spike.sh  run_throughput_bench.sh  sanity_check_phase_a.py  sanity_check_phase_b.py  sanity_corrected_cap.py  sanity_pc2_lambda.py  smoke_load.py  snapshot_leftover_scope.py  token_distribution_audit.py  validate_pca_against_paper.py
src/: README.md
(+70 files in other folders)
