[project]
name = "multi-axis-persona-safety"
version = "0.1.0"
description = "Extending the Assistant Axis paper to study safety-relevant geometry of persona space beyond PC1."
requires-python = ">=3.12,<3.13"
readme = "CLAUDE.md"

dependencies = [
    # Inference engine (pinned — see plans/decisions.md 2026-04-24 / Stage 0 T0.1)
    "vllm==0.19.1",
    # transformers v5 required by vLLM 0.19.1 for Gemma 4 / Qwen 3.6 (Qwen3_5)
    "transformers>=5.5.0",
    # HF tooling
    "huggingface-hub>=1.0",
    "datasets>=3.1",
    "accelerate>=1.3",
    "safetensors>=0.4.5",
    # Mech-interp extraction backends
    "transformer-lens>=2.15",
    "nnsight>=0.4",
    # Data + analysis
    "pyarrow>=18",
    "pandas>=2.2",
    "numpy>=2.0,<3",
    "scikit-learn>=1.6",
    "scipy>=1.14",
    # Config + env
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2,<3",
    "tqdm>=4.66",
    # Visualization
    "plotly>=5.24",
    "dash>=2.18",
    "hf-transfer>=0.1.9",
    "pynvml>=13.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# Scientific Python convention: capital `X`, `L`, `M`, `Q` are idiomatic for
# design matrices, layer indices, and matrix decomposition outputs. Forcing
# lowercase here hurts readability. (PEP 8 ed. 4 carves out a similar exception
# for "where the existing convention dictates otherwise".)
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
